--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@ body {
     width: 90%;
     max-width: 594px;
     margin: 60px auto 0;
+    border: 1px solid black;
     border-radius: 10px;
     padding: 20px;
 }
@@ -49,7 +50,24 @@ body {
     color: white;
 }
 
+.controlsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 #nextButton {
+    background: mediumturquoise;
+    font-size: 18px;
+    width: 120px;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 5px;
+    cursor: pointer;
+    display: none;
+}
+
+#startButton {
     background: mediumturquoise;
     font-size: 18px;
     width: 120px;
