--- a/assets/style.css
+++ b/assets/style.css
@@ -64,7 +64,6 @@ body {
     margin: 20px auto 0;
     border-radius: 5px;
     cursor: pointer;
-    display: none;
 }
 
 #startButton {
@@ -75,5 +74,8 @@ body {
     margin: 20px auto 0;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.hidden {
     display: none;
 }
