--- a/assets/style.css
+++ b/assets/style.css
@@ -86,9 +86,20 @@ body {
     margin: 20px auto 0;
     border-radius: 5px;
     cursor: pointer;
+    display: none;
 }
 
 #startButton {
+    background: mediumturquoise;
+    font-size: 18px;
+    width: 120px;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#highScoresButton {
     background: mediumturquoise;
     font-size: 18px;
     width: 120px;
